# stock_market_simulation

./: .clang-format  .gitattributes  .gitignore  .gitmodules  README.md  server.log.1  stockmarket.db
client/: .python-version  README.md  profile.txt  pyproject.toml
client/trading_client/: __main__.py  serve.py
client/trading_client/api/: __init__.py  api_client.py  exceptions.py  market.py  product.py  responses.py  user.py
client/trading_client/screens/: __init__.py  login.py  screens.tcss  testfile.py  trading.py
client/trading_client/utils/: __init__.py  exception_handler.py  mixins.py
docs/: Unbenanntes_Diagramm.drawio  Unbenanntes_Diagramm.drawio.html  static_api_reference.html
server/: README.md  auth.py  exception_handlers.py  main.py  market_logic.py  models.py  payloads.py  pyproject.toml  server.py
server/_so/: _auth.py  _market_logic.py
server/trading_server/: __main__.py  exception_handlers.py  log_conf.yaml  models.py  payloads.py  timetest.py
server/trading_server/_so/: _auth.py  _market_logic.py
server/trading_server/modules/: auth.pyi  market_logic.pyi  test_pybind.py  testpybind.py
stock_mechanics/: .gitignore  CMakeLists.txt  README.md  database.db  lol  stockmarket.db  stockmarket.db-shm  stockmarket.db-wal  test.db
stock_mechanics/demo/: test.cpp  test_sql.cpp
stock_mechanics/examples/: authmain.cpp  main.cpp  test_database.cpp
stock_mechanics/include/: account.hpp  account_manager.hpp  authenticator.hpp  db_connector.hpp  exception_classes.hpp  market_place.hpp  product.hpp  product_container.hpp  product_entry.hpp  product_price_entry.hpp  product_quantity_entry.hpp  record.hpp  records_cache.hpp  system.hpp  timer.hpp  user.hpp
stock_mechanics/pybindings/: pybind_auth.cpp  pybind_market_logic.cpp
stock_mechanics/src/: authenticator.cpp  db_connector.cpp  exception_classes.cpp  market_place.cpp  product.cpp  product_container.cpp  records_cache.cpp  timer.cpp  user.cpp
stock_mechanics/tests/: test_database.cpp
